<resources>
    <string name="app_name">MY GINNY</string>
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_account">Account</string>
    <string name="title_support">Support</string>
    <string name="title_edit_business_detail">Edit business details</string>
    <string name="title_refer">Refer &amp; Earn</string>
    <string name="title_share">Share Ginny App</string>
    <string name="title_pc">MY GINNY For PC</string>
    <string name="title_Lock">Lockscreen Notification </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="manage">Manage</string>
    <string name="you_dont_t_have_any_pending_order">You dont\'t have any Pending order</string>
    <string name="you_dont_t_have_any_accepted_order">You dont\'t have any accepted order</string>
    <string name="you_dont_t_have_any_shipped_order">You dont\'t have any shipped order</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="this_week">This Week</string>
    <string name="this_month">This Month</string>
    <string name="life_time">Life Time</string>
    <string name="percent">Percent</string>
    <string name="flat_discount">Flat discount</string>
    <string name="this_will_allow_customers_to_see_it_while_applying_the_coupon">This will allow customers to see it while applying the coupon</string>
    <string name="coupon_code">Coupon Code *</string>
    <string name="user_per_customer">User per customer *</string>
    <string name="no_of_time_a_same_customer_can_use_this_coupon_code_n_your_store">No of Time a same customer can use this coupon code n your store</string>


    <string name="title_WhatsApp">WhatsApp Chat Support</string>
    <string name="title_Use">How to use Ginny App</string>
    <string name="title_privacy">Privacy Policy</string>
    <string name="title_rate">Rate Us</string>
    <string name="title_signout">Sign Out</string>
    <string name="title_ourpromise">OUR PROMISE</string>
    <string name="title_backup">Auto Data Backup</string>
    <string name="title_safe">100% Safe &amp; Free</string>
    <string name="title_Save">Save</string>
    <string name="title_updatestorelogo">Update store logo</string>
    <string name="title_Storelink">Store Link</string>
    <string name="title_businessname">Business Name</string>
    <string name="title_businesscategory">Business Category</string>
    <string name="title_phone">Phone Number</string>
    <string name="title_Address">Address</string>
    <string name="title_deleteaccount">Delete my account</string>
    <string name="title_numbernotchange">Phone number can\'t be changed</string>
    <string name="title_products">Products</string>
    <string name="title_categories">Categories</string>
    <string name="title_catalogue">Catalogue</string>
    <string name="Rs">\u20B9</string>
    <string name="title_shareproducts">Share Products</string>
    <string name="title_sharecategory">Share Category</string>
    <string name="title_addnewp">Add new Products</string>
    <string name="title_addnewc">Add new Category</string>
    <string name="title_editproduct">Edit Product</string>
    <string name="title_productname">Product Name<font color='#FF0000'> *</font></string>
    <string name="title_productcategory">Product Category<font color='#FF0000'> *</font></string>
    <string name="title_productmrp">Product MRP<font color='#FF0000'> *</font></string>
    <string name="title_productsellingprice">Selling Price</string>
    <string name="title_uploadimage">You can still add 7 more images</string>
    <string name="title_quantity">Quantity <font color='#FF0000'> *</font></string>
    <string name="title_unit">Unit</string>
    <string name="title_detail">Product Detail</string>
    <string name="title_deleteproduct">Delete this product</string>
    <string name="title_addvarient">+ ADD VARIENTS</string>
    <string name="title_update">Update</string>
    <string name="title_savecontinue">Save and continue</string>
    <string name="title_size">Size</string>
    <string name="title_color">Colour</string>
    <string name="title_size1">Size 1<font color='#000'> *</font></string>
    <string name="title_delete">Delete</string>
    <string name="title_continue">Continue</string>
    <string name="title_create">Create</string>
    <string name="title_categoryimage">Add Category image </string>
    <string name="title_choosecategory">Choose Category </string>
    <string name="title_scan">Scan</string>
    <string name="title_addproduct">Add Product</string>
    <string name="title_search">Search Products</string>
    <string name="title_claim">Claim rewards</string>
    <string name="title_addaccount">Add Account</string>
    <string name="title_invite">Invite Your Contacts</string>
    <string name="invite">Invite</string>
    <string name="reward">Rewards</string>
    <string name="totalearned">Total earned</string>
    <string name="rewardstitle">No scratch cards found</string>
    <string name="refertext">Refer your friends to get scratch cards !</string>
    <string name="logintext">Launch your own online store in just 30 seconds for Free</string>
    <string name="loginhint">Enter your mobile number</string>
    <string name="loginbuttontext">Start</string>
    <string name="logintagline">TRUST BY 23.5 LAKH BUSINESSES</string>
    <string name="otptext">Please enter the 6 digit code sent to you at +999999999999</string>
    <string name="notget">Didn\'t get the code?  </string>
    <string name="otheroption">See other options</string>
    <string name="invalid">OTP invalid. please try again. </string>
    <string name="getotp">Get your OTP on</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="title_language">Change Language</string>
    <string name="address">Address</string>
    <string name="documents">Upload Documents</string>
    <string name="filename">Document Name</string>
    <string name="profile">Create Account</string>
    <string name="help">Help other business</string>
    <string name="share_app">Share APK</string>
    <string name="text_share">Share</string>
    <string name="hindi">Hindi</string>
    <string name="english">English</string>
    <string name="save_changes">Save Changes</string>
    <string name="pc_text">Now manage your Store from Laptop/Desktop</string>
    <string name="pc_add">www.MYGINNY.com</string>
    <string name="w_off">WhatApp Support is OFF now</string>
    <string name="w_on">WhatApp Support is  ON</string>
    <string name="support_text">Choose support type</string>
    <string name="chat">Live Chat</string>
    <string name="phone_call">Phone Call</string>
    <string name="set">Set This Location</string>
    <string name="key">AIzaSyBuAj_3-zMEhQ2T90bEIVhnLl8F6xIPXrQ</string>
    <string name="access_store">To aceess your store, visit:</string>
    <string name="share">Share MY GINNI App with your friends or family and help them digitize their business using MY GINNI app.</string>



    <string name="default_notification_channel_id">Mynotification</string>
    <string name="Welcome_back">Welcome back!</string>
    <string name="whatever_yalla">Yalla Tager whereever you are</string>
    <string name="emai_Phone_number"> Enter Email</string>
    <string name="Password">Password</string>
    <string name="YALLA_TAGER">YALLA TAGER</string>
    <string name="Forget_Password">Forget Password ?</string>
    <string name="Dont_have_account">Dont have an account?</string>
    <string name="Sign_up">Sign up</string>
    <string name="Empty">Empty!</string>
    <string name="Email_have_must_contain">Email have must contain :example@.com</string>

    <string name="Please_wait"> please wait...</string>
    <string name="empty">No Have chat</string>

    <string name="Something_worg_from_server">Something wrong Technical Issue </string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="Please_Check_Internet_Connection">Please Check Internet Connection</string>
    <string name="Something_worg_please_try_again">Server Internal Error</string>
    <string name="description">Description</string>
    <string name="marketing_ndesigns">Marketing <br />Designs</string>


    <string-array name="action">
        <item>Delivered</item>
        <item>Cancel</item>
    </string-array>


    <!--
            My Ginny
    -->
    <string name="field_required">This fiels is required</string>
    <string name="email_formate">Please enter a valid email</string>
    <string name="psw_short">This password is too short</string>
    <string name="check_internet">Please Check Internet</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="sign_in_to_countinue">Sign in to countinue</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_the_otp_you_received_on">Enter the OTP you received on</string>
    <string name="resend_otp">RESEND OTP </string>
    <string name="otp_four_digit">Please enter 4 digits OTP</string>
    <string name="order">My Orders</string>


</resources>







































