<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_icon"
        android:title="@string/title_home" />

    <item
        android:id="@+id/orderDashboardFragment"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/productFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_products" />

    <item
        android:id="@+id/manageFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/manage" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/account_icon"
        android:title="@string/title_account" />

</menu>