<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">

        <item
            android:id="@+id/manage"
            android:title="Manage"
            android:icon="@drawable/ic_baseline_star_border_24"/>

        <item
            android:id="@+id/order"
            android:title="@string/order"
            android:icon="@drawable/order"/>

        <item
            android:id="@+id/product"
            android:title="Products"
            android:icon="@drawable/product"/>

        <item
            android:id="@+id/login"
            android:title="Login"
            android:icon="@drawable/ic_baseline_login_24"/>

        <item
            android:id="@+id/signin"
            android:title="SignUp (Send OTP)"
            android:icon="@drawable/ic_baseline_login_24"/>


        <item
            android:id="@+id/otp"
            android:title="OTP Varification"
            android:icon="@drawable/ic_baseline_login_24"/>

        <item
            android:id="@+id/document"
            android:title="Document Upload"
            android:icon="@drawable/ic_baseline_login_24"/>


        <item
            android:id="@+id/dashboard1"
            android:title="Dashboard 1"
            android:icon="@drawable/ic_baseline_star_border_24"/>

        <item
            android:id="@+id/refer"
            android:title="@string/title_refer"
            android:icon="@drawable/ic_baseline_card_giftcard_24"/>

        <item
            android:id="@+id/share"
            android:title="@string/title_share"
            android:icon="@drawable/ic_baseline_share_24"/>


        <item
            android:id="@+id/language"
            android:title="@string/title_language"
            android:icon="@drawable/ic_baseline_computer_24"/>


    </group>

</menu>