<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.language.ChangeLanguageFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_height="wrap_content">


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/teal_700"
                android:text="@string/hindi"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/teal_700"
                android:text="@string/english"/>


        </RadioGroup>


    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/save_changes"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:id="@+id/addnew"
        android:layout_centerInParent="true"
        android:backgroundTint="@color/teal_700"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:shadowRadius="10"
        android:fontFamily="@font/montserrat_medium"
        />


</RelativeLayout>