<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.claimrewards.RewardsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="20dp"
            android:background="@color/teal_700"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_medium"
                android:textSize="26dp"
                android:text="\u20B9 0"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_medium"
                android:textSize="14dp"
                android:text="@string/totalearned"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="20dp"
            android:padding="20dp"
            android:background="@drawable/button_outline"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/rewardstitle"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/refertext"
                android:layout_height="wrap_content"/>

        </LinearLayout>



    </LinearLayout>


</RelativeLayout>