<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.editproducts.EditProductFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:padding="20dp"
        android:scrollbars="none"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="100dp"
                android:gravity="center"
                android:background="@drawable/camera_border"
                android:layout_height="100dp">

                <ImageView
                    android:layout_width="40dp"
                    android:src="@drawable/ic_baseline_camera_alt_24"
                    android:layout_height="40dp"/>

            </LinearLayout>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:text="@string/title_uploadimage"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:gravity="left"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@color/white"
                    android:padding="5dp"
                    android:text="@string/title_productname">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:foregroundTint="@color/gray"
                        android:text=""
                        android:hint="@string/title_productname"
                        />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:gravity="left"
                android:padding="5dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@color/white"
                    android:text="@string/title_Storelink">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:foregroundTint="@color/gray"
                        android:hint="@string/title_productcategory"
                        />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="2"
                android:padding="5dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:gravity="left"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxBackgroundColor="@color/white"
                        android:text="@string/title_productmrp">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:maxLines="1"
                            android:maxLength="10"
                            android:foregroundTint="@color/gray"
                            android:hint="@string/title_productmrp"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:gravity="left"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        app:boxBackgroundColor="@color/white"
                        android:text="@string/title_productsellingprice">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:inputType="none"
                            android:id="@+id/number"
                            android:maxLines="1"
                            android:maxLength="10"
                            android:foregroundTint="@color/gray"
                            android:hint="@string/title_productsellingprice"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="2"
                android:padding="5dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:gravity="left"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxBackgroundColor="@color/white"
                        android:text="@string/title_quantity">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:foregroundTint="@color/gray"
                            android:hint="@string/title_quantity"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:gravity="left"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        app:boxBackgroundColor="@color/white"
                        android:text="@string/title_unit">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:inputType="none"
                            android:foregroundTint="@color/gray"
                            android:hint="@string/title_unit"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:gravity="left"
                android:padding="5dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@color/white"
                    android:text="@string/title_detail">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:foregroundTint="@color/gray"
                        android:hint="@string/title_detail"
                        />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/teal_700"
                    android:textSize="16dp"
                    android:id="@+id/addvarient"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/title_addvarient"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="25dp"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/title_deleteproduct"/>


            </LinearLayout>


        </LinearLayout>




    </ScrollView>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_above="@id/save"
        android:background="@color/light_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="10dp"
        android:id="@+id/save"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content">



        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title_update"
            android:textColor="@color/white"
            android:letterSpacing="0.2"
            android:textSize="15dp"
            android:shadowRadius="10"
            android:fontFamily="@font/montserrat_medium"
            android:background="@drawable/save_button_background"/>


    </LinearLayout>


</RelativeLayout>