<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="400dp"
             android:layout_gravity="center"
             android:background="@drawable/round_border"
             android:layout_height="wrap_content">





    <LinearLayout
        android:layout_width="match_parent"
        android:padding="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="18dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/pc_text"/>

        <ImageView
            android:layout_width="350dp"
            android:layout_height="250dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/safe_background"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:textSize="14dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/access_store"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/access_button_background"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_share_24"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_700"
                android:textAlignment="center"
                android:textSize="18dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/pc_add"/>


        </LinearLayout>



    </LinearLayout>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:id="@+id/close"
        android:layout_marginRight="40dp"
        android:layout_alignParentRight="true"
        android:background="@drawable/close_icon_black"
        android:orientation="vertical" />
</RelativeLayout>